crates/check_cli/tests/snapshots/main_cases_overrides_formatter/complex_enable_disable_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": {
    "lineWidth": 20
  },
  "javascript": {
    "formatter": {
      "enabled": false
    }
  },
  "overrides": [
    { "includes": ["formatted.js"], "formatter": { "enabled": true } },
    {
      "includes": ["dirty.js"],
      "linter": {
        "rules": {
          "performance": {
            "noBarrelFile": "off"
          }
        }
      }
    }
  ]
}
```

## `dirty.js`

```js
const a = ["loreum", "ipsum"]
```

## `formatted.js`

```js
const a = [
	"loreum",
	"ipsum",
];

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
