crates/check_cli/tests/snapshots/main_cases_overrides_formatter/does_include_file_with_different_languages.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    {
      "includes": ["test.js"],
      "formatter": { "lineWidth": 120 },
      "javascript": { "formatter": { "quoteStyle": "single" } }
    },
    {
      "includes": ["test2.js"],
      "formatter": { "lineWidth": 120, "indentStyle": "space" },
      "javascript": { "formatter": { "semicolons": "asNeeded" } }
    },
    {
      "includes": ["test.css"],
      "formatter": { "lineWidth": 120, "indentStyle": "space" },
      "css": { "formatter": { "quoteStyle": "single" } }
    }
  ]
}
```

## `test.css`

```css
[class='foo'] {
  background-image: url('/path/to/file.jpg');
}

```

## `test.js`

```js
const a = ['loreum', 'ipsum'];

```

## `test2.js`

```js
const a = ["loreum", "ipsum"]

```

# Emitted Messages

```block
Formatted 3 files in <TIME>. Fixed 3 files.
```
