crates/check_cli/tests/snapshots/main_cases_overrides_formatter/does_include_file_with_different_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "overrides": [
    { "includes": ["test.js"], "formatter": { "lineWidth": 20 } },
    {
      "includes": ["test2.js"],
      "formatter": { "lineWidth": 20, "indentStyle": "space" }
    }
  ]
}
```

## `test.js`

```js
const a = [
	"loreum",
	"ipsum",
];

```

## `test2.js`

```js
const a = [
  "loreum",
  "ipsum",
];

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
