crates/check_cli/tests/snapshots/main_cases_overrides_formatter/does_not_conceal_previous_overrides.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `check.json`

```json
{
  "javascript": { "formatter": { "quoteStyle": "single" } },
  "overrides": [
    {
      "includes": ["*.js"],
      "javascript": { "formatter": { "quoteStyle": "double" } }
    },
    {
      "includes": ["test.js"],
      "javascript": { "formatter": { "indentWidth": 4 } }
    }
  ]
}
```

## `test.js`

```js
const a = ["loreum", "ipsum"]
```

## `test2.js`

```js
const a = ["loreum", "ipsum"]
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - const·a·=·["loreum",·"ipsum"]
      1 │ + const·a·=·["loreum",·"ipsum"];
      2 │ + 
  

```

```block
test2.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - const·a·=·["loreum",·"ipsum"]
      1 │ + const·a·=·["loreum",·"ipsum"];
      2 │ + 
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 2 errors.
```
